auth pages setup done

--- a/templates/admin-base.html
+++ b/templates/admin-base.html
@@ -12,7 +12,7 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!--Stylesheet-->
-    <link rel="stylesheet" href="{% static 'css/student-style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/admin-style.css' %}">
     <!-- SEO tags -->
     <meta name="description" content="Elective Subject Selection">
     <meta name="author" content="Team Alpha">
