--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -6,19 +6,17 @@
         <!-- <div class="container"> -->
             <div class="navbar">
                 <div class="logo">
-                    <img src="image/image.png" width="125px">
+                    <img src="{% static 'images/logo.png' %}" width="125px">
                 </div>
                 <nav>
                     <ul id="menuitem">
-
-                        <li><a href="">HOME</a></li>
-                        <li><a href="allproduct.html">PROFILE</a></li>
-                        <li><a href="aboutus.html">ELECTIVE</a></li>
-                        <li><a href="">TIME TABLE</a></li>
+                        <li><a href="{% url 'index' %}">HOME</a></li>
+                        <li><a href="{% url 'student-dashboard' %}">PROFILE</a></li>
+                        <li><a href="{% url 'all-subjects' %}">ELECTIVE</a></li>
+                        <li><a href="{% url 'time-table' %}">TIME TABLE</a></li>
                         <!-- <li><a href="">CONTACT US</a></li> -->
                     </ul>
                 </nav>
-
 
                 <!-- <img  src="./image/BELL.png" width="30px" height="30px"><a href="cart.html" class="yo">2</a> -->
                 <!-- <img src="image/menu.jpg" width="30px" height="30px" class="menu" onclick="menutoggle()"> -->
@@ -28,7 +26,6 @@
                     <div class="col-2">
                         <img src="./image/hu1.jpg">
                     </div>
-                   
                     <div class="col-2">
                         <h1>Student Name</h1>
                         <p>201101010</p>
