--- a/static/css/student-style.css
+++ b/static/css/student-style.css
@@ -243,6 +243,57 @@ ul{
     display: none;
 
 }
+
+.sub_card_body
+{
+    background: #e0d68b; /* fallback color */
+    background: radial-gradient(#fff,#84efff);
+    background-repeat: no-repeat;
+    background-attachment: fixed; /*spans the whole page*/
+}
+.subject_container{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    background: radial-gradient(#fff,#84efff);
+    /* border: 2px solid blue; */
+    border-radius: 20px;
+    box-shadow: 0px 10px 20px rgb(51, 51, 51);
+    width: 98%;
+    margin: auto;
+}
+.subject{
+    /* display: inline-block; */
+    width: 300px;
+    height: 300px;
+    border: 2px solid grey;
+    text-align: center;
+    margin: 20px;
+    /* box-shadow: 10px 5px 15px rgb(25, 179, 240); */
+    box-shadow: 10px 10px 15px rgb(100, 100, 100);
+    border-radius: 10px;
+    font-family: sans-serif;
+    padding-bottom: 10px;
+    background-color: white;
+    padding-top: 40px;
+}
+
+.sub_info{
+    /* display: inline-block; */
+    border: 1px solid grey;
+    /* margin-bottom: 15px; */
+    font-family: sans-serif;
+    background-color: grey;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 4px;   
+    position: relative;
+    top: 20px;
+}
+
+/* MEDIA QUERIES */
+
 @media only screen and (max-width: 600px){
  
    nav ul{
@@ -275,6 +326,9 @@ nav ul li a{
 .col-2 img:hover{
     transform: translateY(-15px);
 }
+
+
+
 @media only screen and (max-width: 600px){
     .row{
         text-align: center;
