--- a/templates/students/add-single-student.html
+++ b/templates/students/add-single-student.html
@@ -16,7 +16,7 @@
                     </ul>
                 </nav>
                 <!-- <img src="image/BELL.png" width="30px" height="30px"> -->
-                <!-- <img src="image/menu.jpg" width="30px" height="30px" class="menu" onclick="menutoggle()"> -->
+                <img src="image/menu.jpg" width="30px" height="30px" class="menu" onclick="menutoggle()">
             </div>
         </div>
     </div>
@@ -28,6 +28,13 @@
                 {% csrf_token %}
                 <input name="name" class="an" type="text" placeholder="Enter Student Name" required>
                 <input name="roll" class="an" type="text" placeholder="Enter Student Roll No" required>
+                <select id="dept" name="dept" class="an" required style="color: grey; width: 100%; padding: 15px; margin-bottom: 15px;">
+                    <option value="">Enter Student Department</option>
+                    <option value="dept1">dept1</option>
+                    <option value="dept2">dept2</option>
+                    <option value="dept3">dept3</option>
+                    <option value="dept4">dept4</option>
+                  </select>
                 <input name="email" class="an" type="email" placeholder="Enter Student Email ID" required>
                 <input name="phone" class="an" type="text" placeholder="Enter Student Phone No" required>
                 <button class="submitbtn" type="submit">Add Student</button>
