--- a/templates/stu-base.html
+++ b/templates/stu-base.html
@@ -32,5 +32,17 @@
     {% block content %}
     {% endblock content %}
 </body>
+<script>
+    var menuitem = document.getElementById("menuitem")
+    menuitem.style.maxHeight = "0px";
+    function menutoggle() {
+        if (menuitem.style.maxHeight == "0px") {
+            menuitem.style.maxHeight = "200px";
+        }
+        else {
+            menuitem.style.maxHeight = "0px";
+        }
+    }
 
+</script>
 </html>
