--- a/templates/elective/enroll-form.html
+++ b/templates/elective/enroll-form.html
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="./a4login/image/image.png" width="125px">
+                    <img src="{% static 'images/logo.png' %}" width="125px">
                 </div>
                 <nav>
                     <ul id="menuitem">
