--- a/templates/students/add-single-student.html
+++ b/templates/students/add-single-student.html
@@ -30,10 +30,9 @@
                 <input name="roll" class="an" type="text" placeholder="Enter Student Roll No" required>
                 <select id="dept" name="dept" class="an" required style="color: grey; width: 100%; padding: 15px; margin-bottom: 15px;">
                     <option value="">Enter Student Department</option>
-                    <option value="dept1">dept1</option>
-                    <option value="dept2">dept2</option>
-                    <option value="dept3">dept3</option>
-                    <option value="dept4">dept4</option>
+                    {% for dept in deptartments %}
+                        <option value={{dept.id}}>{{dept.name}}</option>
+                    {% endfor %}
                   </select>
                 <input name="email" class="an" type="email" placeholder="Enter Student Email ID" required>
                 <input name="phone" class="an" type="text" placeholder="Enter Student Phone No" required>
