--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -22,11 +22,11 @@
                         <img src="./image/hu1.jpg">
                     </div>
                     <div class="col-2">
-                        <h2>{{user.name}}</h2>
-                        <p><b>Roll No : </b>{{user.roll_no}}</p>
-                        <p><b>Department : </b>{{user.department.name}}</p>
-                        <p><b>Contact : </b>{{user.phone}}</p>
-                        <p><b>Email : </b>{{user.email}}</p> 
+                        <h2>{{user.name | safe }}</h2>
+                        <p><b>Roll No : </b>{{user.roll_no | safe }}</p>
+                        <p><b>Department : </b>{{user.department.name | safe }}</p>
+                        <p><b>Contact : </b>{{user.phone | safe }}</p>
+                        <p><b>Email : </b>{{user.email | safe }}</p> 
                     </div>
                 </div>
             </div>
