--- a/templates/students/enrolled-students-list.html
+++ b/templates/students/enrolled-students-list.html
@@ -1,29 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="student-style.css">
-    <title>Document</title>
-</head>
-<body>
+{% extends '../stu-base.html' %}
+{% load static %}
+
+{% block content %}
+
     <div class="header">
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="./admin/image/image.png" width="125px">
+                    <img src="{% static 'images/logo.png' %}" width="125px">
                 </div>
                 <nav>
                     <ul id="menuitem">
-    
-                        <li><a href="">HOME</a></li>
-                        <li><a href="allproduct.html">PROFILE</a></li>
-                        <li><a href="aboutus.html">ELECTIVE</a></li>
-                        <li><a href="">TIME TABLE</a></li>
-                        <!-- <li><a href="">CONTACT US</a></li> -->
+                        <li><a href="{% url 'index' %}">HOME</a></li>
+                        <li><a href="{% url 'student-dashboard' %}">PROFILE</a></li>
+                        <li><a href="{% url 'all-subjects' %}">ELECTIVE</a></li>
+                        <li><a href="{% url 'time-table' %}">TIME TABLE</a></li>
                     </ul>
                 </nav>
-                <img src="image/menu.jpg" width="30px" height="30px" class="menu" onclick="menutoggle()">
             </div>
         </div>
     </div>
@@ -87,14 +80,14 @@
         }
     </style>
 
-    <div class="table_heading">STUDENTS ENROLLED FOR {ELECTIVE SUB}</div>
+    <div class="table_heading">STUDENTS ENROLLED FOR {{subject}}</div>
     <table class="stu_details" id="stu_detail">
-        <tr>
+        <tr><b>
             <th>Student name</th>
             <th>Student dept</th>
             <th>Student email</th>
             <th>Student contact</th>
-        </tr>
+        </b></tr>
        
         <tr>
             <td>John Doe</td>
@@ -118,19 +111,7 @@
         </tr>
     </table>
     <div style="text-align: center;"><button onclick="downloadExcel()" class="btn">Download as Excel</button></div>
-    
-    <script>
-        var menuitem = document.getElementById("menuitem")
-        menuitem.style.maxHeight = "0px";
-        function menutoggle() {
-            if (menuitem.style.maxHeight == "0px") {
-                menuitem.style.maxHeight = "200px";
-            }
-            else {
-                menuitem.style.maxHeight = "0px";
-            }
-        }
-    </script>
+
     <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
     <script>
         
@@ -162,5 +143,5 @@
         }
     }
     </script>
-</body>
-</html>
+
+{% endblock content %}
