--- a/templates/teacher/add-single-teacher.html
+++ b/templates/teacher/add-single-teacher.html
@@ -32,7 +32,13 @@
         <form action="" method="post">
             <input class="an" type="text" name="tr_name" placeholder="Enter faculty name" required>
             <input class="an" type="text" name="tr_regno" placeholder="Enter faculty register no" required>
-            <input class="an" type="text" name="tr_dept" placeholder="Enter faculty Department" required>
+            <select id="dept" name="dept" class="an" required style="color: grey; width: 100%; padding: 15px; margin-bottom: 15px;">
+                <option value="">Enter Student Department</option>
+                <option value="dept1">dept1</option>
+                <option value="dept2">dept2</option>
+                <option value="dept3">dept3</option>
+                <option value="dept4">dept4</option>
+              </select>
             <input class="an" type="email" name="tr_email" placeholder="Enter faculty email" required>
             <input class="an" type="text" name="tr_contact" placeholder="Enter faculty contact no" required>
             <!-- <a href="" class="submitbtn">Add faculty</a> -->
