--- a/templates/students/add-single-student.html
+++ b/templates/students/add-single-student.html
@@ -16,7 +16,7 @@
                     </ul>
                 </nav>
                 <!-- <img src="image/BELL.png" width="30px" height="30px"> -->
-                <img src="image/menu.jpg" width="30px" height="30px" class="menu" onclick="menutoggle()">
+                <img src="{% static 'images/menu.jpg' %}" width="30px" height="30px" class="menu" onclick="menutoggle()">
             </div>
         </div>
     </div>
