--- a/static/css/admin-style.css
+++ b/static/css/admin-style.css
@@ -856,4 +856,336 @@ margin-top: 30px;
         .btn5:hover{
             background:rgb(151, 241, 249);
         }
+        /* body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background: linear-gradient(#fff,#84efff);  ;
+            color: #000000;
+            font-family: "Montserrat", sans-serif;
+          } */
+          
+          .material-icons-outlined {
+            vertical-align: middle;
+            line-height: 1px;
+          }
+          
+          .text-primary {
+            color: #000000;
+          }
+          
+          .text-blue {
+            color: #246dec;
+          }
+          
+          .text-red {
+            color: #cc3c43;
+          }
+          
+          .text-green {
+            color: #367952;
+          }
+          
+          .text-orange {
+            color: #f5b74f;
+          }
+          
+          .font-weight-bold {
+            font-weight: 600;
+          }
+          
+          .grid-container {
+            display: grid;
+            grid-template-columns: 260px 1fr 1fr 1fr;
+            grid-template-rows: 0.2fr 3fr;
+            grid-template-areas:
+              "sidebar header header header"
+              "sidebar main main main";
+            height: 100vh;
+          }
+          
+
+          
+          .header1 {
+            grid-area: header;
+            height: 70px;
+            background: linear-gradient(left#fff,right#84efff);;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 30px 0 30px;
+            /* box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2); */
+          }
+          
+          .menu-icon1 {
+            display: none;
+          }
+          
+          #sidebar {
+            grid-area: sidebar;
+            height: 100%;
+            background: linear-gradient(left#fff,right#84efff);
+            /* color: #121213; */
+            overflow-y: auto;
+            transition: all 0.5s;
+            -webkit-transition: all 0.5s;
+          }
+          
+          .sidebar-title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 20px 20px 20px;
+            margin-bottom: 30px;
+          }
+          
+          .sidebar-title > span {
+            display: none;
+          }
+          
+          .sidebar-brand {
+            margin-top: 15px;
+            font-size: 20px;
+            font-weight: 700;
+          }
+          
+          .sidebar-list {
+            padding: 0;
+            margin-top: 15px;
+            list-style-type: none;
+          }
+          
+          .sidebar-list-item {
+            padding: 20px 20px 20px 20px;
+          }
+          
+          .sidebar-list-item:hover {
+            background-color: rgba(252, 255, 255, 0.523);
+            cursor: pointer;
+          }
+          
+          .sidebar-list-item > a {
+            text-decoration: none;
+            color: #000000;
+          }
+          
+          .sidebar-responsive {
+            display: inline !important;
+            position: absolute;
+           
+            z-index: 12 !important;
+          }
        
+          .main-container {
+            grid-area: main;
+            overflow-y: auto;
+            padding: 20px 20px;
+          }
+          
+          .main-title {
+            display: flex;
+            justify-content: space-between;
+          }
+          
+          .main-title > p {
+            font-size: 20px;
+          }
+          
+          .main-cards {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            gap: 20px;
+            margin: 20px 0;
+          }
+          
+          .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            padding: 25px;
+            background-color: #ffffff;
+            box-sizing: border-box;
+            border: 1px solid #d2d2d3;
+            border-radius: 5px;
+            box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+          }
+          
+          .card:first-child {
+            border-left: 7px solid #90f5f5;
+          }
+          
+          .card:nth-child(2) {
+            border-left: 7px solid #90f5f5;
+          }
+          
+          .card:nth-child(3) {
+            border-left: 7px solid #90f5f5;
+          }
+          
+          .card:nth-child(4) {
+            border-left: 7px solid #90f5f5;
+          }
+          
+          .card > span {
+            font-size: 20px;
+            font-weight: 600;
+          }
+          
+          .card-inner {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+          }
+          
+          .card-inner > p {
+            font-size: 18px;
+          }
+          
+          .card-inner > span {
+            font-size: 35px;
+          }
+          
+          .charts {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+          }
+          
+          .charts-card {
+            background-color: #ffffff;
+            margin-bottom: 20px;
+            padding: 25px;
+            box-sizing: border-box;
+            -webkit-column-break-inside: avoid;
+            border: 1px solid #d2d2d3;
+            border-radius: 5px;
+            box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+          }
+          
+          .chart-title {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 22px;
+            font-weight: 600;
+          }
+          
+          ::-webkit-scrollbar {
+            width: 5px;
+            height: 6px;
+          }
+          
+          ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px #a5aaad;
+            border-radius: 10px;
+          }
+          
+          ::-webkit-scrollbar-thumb {
+            background-color: #4f35a1;
+            border-radius: 10px;
+          }
+          
+          ::-webkit-scrollbar-thumb:hover {
+            background-color: #a5aaad;
+          }
+          
+          
+          @media screen and (max-width: 992px) {
+            .grid-container {
+              grid-template-columns: 1fr;
+              grid-template-rows: 0.2fr 3fr;
+              grid-template-areas:
+                "header"
+                "main";
+            }
+          
+            #sidebar {
+              display: none;
+            }
+          
+            .menu-icon {
+              display: inline;
+            }
+          
+            .sidebar-title > span {
+              display: inline;
+            }
+          }
+          
+          @media screen and (max-width: 768px) {
+            .main-cards {
+              grid-template-columns: 1fr;
+              gap: 10px;
+              margin-bottom: 0;
+            }
+          
+            .charts {
+              grid-template-columns: 1fr;
+              margin-top: 30px;
+            }
+          }
+          
+ 
+          @media screen and (max-width: 576px) {
+            .header-left {
+              display: none;
+            }
+          }
+.dash{
+     /* width: 100%; */
+    padding: 10px 0;
+    margin: 5px 0;
+    border-left: 0;
+    border-top: 0;
+    border-right: 0;
+    border-bottom: 1px solid #999;
+    outline: none;
+    background: transparent;
+}
+.container1 {
+    background-color: #ffffff;
+    width: 100%;
+    max-width: 34.37em;
+    position: relative;
+    margin: 3.12em auto;
+    padding: 3.12em 1.25em;
+    border-radius: 0.43em;
+    box-shadow: 0 1.25em 2.18em rgb(1, 28, 71, 0.3);
+    align-self: center;
+  }
+  input[type="file"] {
+    display: none;
+  }
+  label {
+    display: block;
+    position: relative;
+    background-color: #025bee;
+    color: #ffffff;
+    font-size: 1.12em;
+    font-weight: 500;
+    text-align: center;
+    width: 18.75em;
+    padding: 1.12em 0;
+    margin: auto;
+    border-radius: 0.31em;
+    cursor: pointer;
+  }
+  #num-of-files {
+    font-weight: 400;
+    text-align: center;
+    margin: 1.25em 0 1.87em 0;
+  }
+  ul {
+    list-style-type: none;
+  }
+  .container1 li {
+    font-weight: 500;
+    background-color: #eff5ff;
+    color: #025bee;
+    margin-bottom: 1em;
+    padding: 1.1em 1em;
+    border-radius: 0.3em;
+    display: flex;
+    justify-content: space-between;
+    
+  }
