--- a/templates/dashboard/teacher.html
+++ b/templates/dashboard/teacher.html
@@ -12,9 +12,10 @@
                 <nav>
                     <ul id="menuitem">
                         <li><a href="{% url 'index' %}">HOME</a></li>
-                        <li><a href="{% url 'student-dashboard' %}">PROFILE</a></li>
-                        <li><a href="{% url 'all-subjects' %}">ELECTIVE</a></li>
+                        <li><a href="{% url 'teacher-dashboard' %}">PROFILE</a></li>
+                        <li><a href="{% url 'students' %}">STUDENTS</a></li>
                         <li><a href="{% url 'time-table' %}">TIME TABLE</a></li>
+                        <li><a href="{% url 'contact-us' %}">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
