--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -20,7 +20,11 @@
             <div class="smallcon">
                 <div class="row"> 
                     <div class="col-2">
-                        <img src="{{user.profile_pic.url}}">
+                        {% if user.profile_pic %}
+                            <img src="{{user.profile_pic.url}}">
+                        {% else %}
+                            <img src="{% static 'images/profile.webp' %}">
+                        {% endif %}
                     </div>
                     <div class="col-2">
                         <h2>{{user.name | safe }}</h2>
